# uNPU-Bench

./: .dockerignore  .gitignore  Dockerfile  README.md  cmd_s.md  model_converter.py  onnx_to_kmodel.py  onnx_to_rknn.py  requirements.txt  rm_unsupported_ops.py  todo.txt
model/autoenc/: _weight_map.csv  autoenc.cvimodel  autoenc.onnx  autoenc.pth.tar  autoenc.rknn  autoenc_converter.py  autoenc_cv180x_int8.layer_group_cache.json  autoenc_full_integer_quant_eiq.tflite  autoenc_max78000.py  autoenc_opt.onnx.prototxt  autoenc_origin.mlir  autoenc_shape_ops  autoenc_tensor_info.txt  autoenc_top_f32_all_weight.npz  autoenc_tpu_addressed_cv180x_int8_sym_weight_fix.npz  dataset.txt  model_converter.py  sample_autoenc.npy  sample_data_nchw.npy
model/autoenc/quant/: autoenc_dynamic_range_quant.tflite  autoenc_float16.tflite  autoenc_float32.tflite  autoenc_full_integer_quant.tflite  autoenc_full_integer_quant_with_int16_act.tflite  autoenc_integer_quant.tflite  autoenc_integer_quant_with_int16_act.tflite  fingerprint.pb  saved_model.pb
model/autoenc/vela_size/: autoenc_full_integer_quant_summary_Ethos_U55_High_End_Embedded.csv  autoenc_full_integer_quant_vela.cc  autoenc_full_integer_quant_vela.tflite
model/nas/: model_converter.py  nas-q.pth.tar  nas.mlir  nas.onnx  nas.pth.tar  nas.ref_files.json  nas.rknn  nas_converter.py  nas_cv180x_int8.layer_group_cache.json  nas_max78000.py  nas_origin.mlir  nas_top_f32_all_weight.npz  nas_tpu_addressed_cv180x_int8_sym_weight.npz  nas_tpu_addressed_cv180x_int8_sym_weight_fix.npz  sample_nas.npy
model/nas/nas/: ref_files.json
model/nas/quant/: fingerprint.pb  nas_dynamic_range_quant.tflite  nas_float16.tflite  nas_float32.tflite  nas_full_integer_quant.tflite  nas_full_integer_quant_with_int16_act.tflite  nas_integer_quant.tflite  nas_integer_quant_with_int16_act.tflite  saved_model.pb
model/nas/vela_perf/: nas_full_integer_quant_vela.cc  nas_full_integer_quant_vela.tflite
model/nas/vela_size/: nas_full_integer_quant_vela.tflite
model/resnet/: _weight_map.csv  model_converter.py  resnet.cvimodel  resnet.mlir  resnet.onnx  resnet.pth.tar  resnet.ref_files.json  resnet.rknn  resnet_converter.py  resnet_cv180x_int8_sym_tpu.mlir  resnet_opt.onnx.prototxt  resnet_tensor_info.txt  resnet_top_f32_all_weight.npz  resnet_tpu_addressed_cv180x_int8_sym_weight.npz  sample_data_nchw.npy  sample_resnet.npy
model/resnet/quant/: fingerprint.pb  resnet_dynamic_range_quant.tflite  resnet_float16.tflite  resnet_float32.tflite  resnet_full_integer_quant.tflite  resnet_full_integer_quant_with_int16_act.tflite  resnet_integer_quant.tflite  resnet_integer_quant_with_int16_act.tflite  saved_model.pb
model/resnet/vela_perf/: resnet_full_integer_quant_summary_Ethos_U55_High_End_Embedded.csv  resnet_full_integer_quant_vela.cc
model/resnet/vela_size/: resnet_full_integer_quant_summary_Ethos_U55_High_End_Embedded.csv  resnet_full_integer_quant_vela.cc
model/simplenet/: _weight_map.csv  calibration_table  dataset.txt  model_converter.py  simplenet-q.pth.tar  simplenet.cvimodel  simplenet.onnx  simplenet.pth.tar  simplenet.rknn  simplenet_converter.py  simplenet_cv180x_int8.layer_group_cache.json  simplenet_cv180x_int8_sym_final.mlir  simplenet_cv180x_int8_sym_tpu.mlir  simplenet_opt.onnx.prototxt  simplenet_tpu_addressed_cv180x_int8_sym_weight_fix.npz
model/simplenet/quant/: fingerprint.pb  saved_model.pb  simplenet_dynamic_range_quant.tflite  simplenet_float16.tflite  simplenet_float32.tflite  simplenet_full_integer_quant.tflite  simplenet_full_integer_quant_with_int16_act.tflite  simplenet_integer_quant.tflite  simplenet_integer_quant_with_int16_act.tflite
model/simplenet/vela_perf/: simplenet_full_integer_quant_summary_Ethos_U55_High_End_Embedded.csv
model/simplenet/vela_size/: simplenet_full_integer_quant_summary_Ethos_U55_High_End_Embedded.csv  simplenet_full_integer_quant_vela.cc  simplenet_full_integer_quant_vela.tflite
model/unet/: calibration_table  model_converter.py  sample_data_nchw.npy  sample_unet.npy  unet-q.pth.tar  unet.onnx  unet.pth.tar  unet.rknn  unet_converter.py  unet_cv180x_int8.layer_group_cache.json  unet_cv180x_int8_sym_tpu.mlir  unet_qat.onnx  unet_qat_full_integer_quant_vela_performance.tflite  unet_qat_full_integer_quant_vela_size.tflite  unet_shape_ops  unet_top_f32_all_weight.npz
model/unet/quant/: fingerprint.pb  saved_model.pb  unet_dynamic_range_quant.tflite  unet_float32.tflite
model/unet/vela_perf/: unet_full_integer_quant_summary_Ethos_U55_High_End_Embedded.csv  unet_full_integer_quant_vela.cc
model/unet/vela_size/: unet_full_integer_quant_vela.tflite
model/yolo/: ai85-yolo-224-hwc.yaml  ai85-yolo-96-hwc.yaml  calibration_table  model_converter.py  sample_data_nhwc.npy  yolo_converter.py  yolo_dataset.py  yolov1.cvimodel  yolov1.kmodel  yolov1.mlir  yolov1.onnx  yolov1.pth  yolov1.pth.tar  yolov1.rknn  yolov1_96_max78000.py  yolov1_cv180x_int8_sym_final.mlir  yolov1_cv180x_int8_sym_tpu.mlir  yolov1_full_integer_quant_eiq.tflite  yolov1_max78000.py  yolov1_origin.mlir  yolov1_q.tflite  yolov1_qat_train.py  yolov1_qat_train_max78000.py  yolov1_s.pth  yolov1_s.pth.tar  yolov1_shape_ops  yolov1_top_f32_all_weight.npz  yolov1_vela_perf_q.tflite  yolov1_vela_size_q.tflite
model/yolo/quant/: fingerprint.pb  saved_model.pb  yolov1_dynamic_range_quant.tflite  yolov1_float16.tflite  yolov1_float32.tflite  yolov1_full_integer_quant.tflite  yolov1_full_integer_quant_with_int16_act.tflite  yolov1_integer_quant.tflite  (+1 more)
npu/luckfox/: build.sh
npu/milk-v/: build_app.sh
src/: all_scripts.sh  code_gen.py  compile.py  convert.py  eval.sh  flags.py  main.py  model_gen.py  onnx_to_kmodel.py  parse.py  platforms.yaml  pth_to_ckpt.py  run_yolo_ai8x.sh  run_yolo_hxwe2.sh  run_yolo_mcxn947.sh  utils.py  val.py
src/model_gen/: ai8x.py  cvi.py  eiq.py  vela.py
src/npu/frdmcxn947/autoenc/: .cproject  CMakeLists.txt  CMakePresets.json  SW-Content-Register.txt  autoenc.ld  autoenc.xml  autoenc_ram  mcux_include.json  yolov1_Debug.ld
src/npu/frdmcxn947/autoenc/source/model/: model_data.s
src/tools/: model_transform.py
(+1498 files in other folders)
